Closed
Bug 795611
Opened 13 years ago
Closed 13 years ago
Background-color changed by mouse hovering doesn't clear correctly after dlbi landed
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
mozilla18
| Tracking | Status | |
|---|---|---|
| firefox17 | --- | unaffected |
| firefox18 | + | verified |
People
(Reporter: yamadat501, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
169.69 KB,
image/png
|
Details | |
|
901 bytes,
patch
|
cjones
:
review+
|
Details | Diff | Splinter Review |
In Bugzilla search results pages, background color of columns changes by hovering the mouse cursor.
After dlbi merge (as far as I see), background color changed by hovering doesn't clear correctly after unhovered (like attachment file).
| Reporter | ||
Comment 1•13 years ago
|
||
Regression range tracking(m-i)
Last OK :9f476b4ac1e1
First Bad:6b58397ad735
So, caused by dlbi patch groups.
Blocks: dlbi
Keywords: regression
| Assignee | ||
Comment 2•13 years ago
|
||
We need to call the virtual version of this function so that the table code can overload it correctly.
Attachment #666277 -
Flags: review?(roc)
Comment on attachment 666277 [details] [diff] [review]
Call the virtual InvalidateFrame from InvalidateFrameSubtree
We need a test for this.
Attachment #666277 -
Flags: review?(roc) → review+
| Assignee | ||
Updated•13 years ago
|
Flags: in-testsuite?
| Assignee | ||
Comment 4•13 years ago
|
||
tracking-firefox18:
--- → ?
Confirmed fixed in http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-central-linux64/1348986078/firefox-18.0a1.en-US.linux-x86_64.tar.bz2 .
Status: UNCONFIRMED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Status: RESOLVED → UNCONFIRMED
Component: General → Layout
Product: Firefox → Core
Resolution: FIXED → ---
Sorry for the mid-air mess. :/
Status: UNCONFIRMED → RESOLVED
Closed: 13 years ago → 13 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 7•13 years ago
|
||
Confirmed fixed in mozilla-central build.
Thank you for a quick fix!
Updated•13 years ago
|
Updated•13 years ago
|
Target Milestone: --- → mozilla18
Updated•13 years ago
|
Assignee: nobody → matt.woodrow
Comment 9•12 years ago
|
||
Verified fixed in Firefox 18 beta 4.
User Agent: Mozilla/5.0 (Windows NT 5.1; rv:18.0) Gecko/20100101 Firefox/18.0
Build ID: 20121212073002
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•